# nix

./: .gitignore  Makefile  Makefile.config.in  configure.ac  local.mk  nix.spec.in  release.nix
corepkgs/: derivation.nix  imported-drv-to-derivation.nix
perl/lib/Nix/: Store.xs
scripts/: Makefile.am  build-remote.pl.in  local.mk
src/: Makefile.am
src/build-remote/: build-remote.cc
src/libexpr/: common-opts.hh  eval.cc  eval.hh  get-drvs.cc  get-drvs.hh  local.mk  primops.cc  value-to-xml.cc
src/libstore/: build.cc  daemon-store.cc  derivations.cc  derivations.hh  download.cc  download.hh  globals.cc  globals.hh  local-store.cc  local-store.hh  misc.cc  misc.hh  pathlocks.cc  remote-store.cc  remote-store.hh  schema.sql  ssh-store.cc  store-api.cc  store-api.hh  worker-protocol.hh
src/libutil/: util.cc  util.hh
src/nix-build/: Makefile.am  nix-build.cc
src/nix-daemon/: nix-daemon.cc
src/nix-env/: nix-env.cc  user-env.cc
src/nix-evaluate/: Makefile.am  nix-evaluate.cc
src/nix-impurity-helper/: Makefile.am  nix-impurity-helper.cc
src/nix-store/: nix-store.cc
tests/: Makefile.am  fallback.sh  fixed.sh  gc-concurrent.sh  gc.sh  import-derivation.sh  impure-command.sh  lang.sh  local.mk  misc.sh  multiple-outputs.nix  multiple-outputs.sh  nix-channel.sh  nix-pull.sh  nix-push.sh  parallel.sh  recursive-derivation.builder.sh  recursive-derivation.nix  recursive-derivation.sh  remote-builds.nix  simple.sh  substitutes.sh  substitutes2.sh  timeout.sh  trusted-impurity-helper-builder.c  trusted-impurity-helper.nix  trusted-impurity-helper.sh
(+1 files in other folders)
